# MPRAlib

./: .editorconfig  .flake8  .gitignore  .lintr  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  data.json  pyproject.toml  setup.cfg  setup.py
.github/: copilot-instructions.md  dependabot.yml  release-please-config.json
.github/linters/: .flake8  .yamllint.yml
.github/workflows/: lint.yml  (+8 more)
docs/: conf.py  doc.rst  environment.yml  getting-started.rst  index.rst  mpralib.rst  mpralib.utils.rst  project.rst  tutorial.rst
examples/: mpralib.ipynb  quality_metrics.ipynb
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_472848804eeb6296___init___py.html  z_472848804eeb6296_cli_py.html  z_472848804eeb6296_exception_py.html  z_472848804eeb6296_mpradata_py.html  z_5eb11ba9e6f79c59_file_validation_py.html  z_5eb11ba9e6f79c59_io_py.html  z_5eb11ba9e6f79c59_plot_py.html  z_a44f0ac069e85531_test_cli_combine_py.html  z_a44f0ac069e85531_test_cli_functional_py.html  z_a44f0ac069e85531_test_cli_plot_py.html  z_a44f0ac069e85531_test_cli_py.html  z_a44f0ac069e85531_test_cli_validate_file_py.html  z_a44f0ac069e85531_test_mpradata_py.html  z_a44f0ac069e85531_test_utils_io_py.html  z_a44f0ac069e85531_test_utils_plot_py.html
scripts/: example_bcalm_elements.R  example_bcalm_variants.R  example_mpralm.R  example_mpralm_elements.R  example_mpralm_variants.R  qc_metrics.py
tests/: test_cli.py  test_cli_combine.py  test_cli_functional.py  test_cli_plot.py  test_cli_validate_file.py  test_mpradata.py  test_utils_io.py  test_utils_plot.py
(+26 files in other folders)
